--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install toolchain
-        uses: dtolnay/rust-toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
 
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install toolchain
-        uses: dtolnay/rust-toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
 
@@ -51,7 +51,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install toolchain
-        uses: dtolnay/rust-toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
           components: clippy
@@ -71,7 +71,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         
       - name: Install toolchain (minimal+clippy, stable)
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@v1
         with:
           components: rustfmt
 
